<resources>
    <string name="app_name">HengMen</string>
    <string name="title_activity_game">GameActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="gallow">Thong long</string>
    <string name="head">Dau</string>
    <string name="body">Than</string>
    <string name="leftarm">Tay trai</string>
    <string name="rightarm">Tay phai</string>
    <string name="leftleg">Chan trai</string>
    <string name="rightleg">Chan phai</string>
</resources>
